# code-shape.nvim

./: Makefile  README.md
.github/workflows/: release.yaml
benchmark/: README.md  run-comparison.sh  run-e2e.sh
doc/: code-shape.txt
lua/code-shape/: config.lua  diff.lua  health.lua  highlight.lua  hotspots.lua  indexer.lua  init.lua  metrics.lua  roots.lua  rpc.lua  snapshot.lua  types.lua  ui.lua  util.lua
lua/code-shape/picker/: fzf_lua.lua  init.lua  snacks.lua  telescope.lua  utils.lua
lua/code-shape/ui/: actions.lua  input.lua  render.lua  state.lua
lua/code-shape/ui/actions/: calls_graph.lua  keymaps.lua  lsp.lua  shared.lua
lua/telescope/_extensions/: code_shape.lua
plugin/: code-shape.lua
rust/: Cargo.toml  deny.toml
rust/benches/: index_bench.rs  search_bench.rs
rust/benches/common/: mod.rs
rust/src/: index.rs  lib.rs  main.rs  rpc.rs  search.rs  store.rs
rust/tests/: index_test.rs  search_test.rs
scripts/: download-binary.sh
tests/: minimal_init.lua
tests/integration/: regression_spec.lua  ui_lsp_integration_spec.lua
tests/unit/: config_spec.lua  diff_spec.lua  health_spec.lua  highlight_spec.lua  hotspots_spec.lua  indexer_spec.lua  init_spec.lua  metrics_spec.lua  picker_backend_contract_spec.lua  picker_init_spec.lua  picker_utils_spec.lua  roots_spec.lua  rpc_spec.lua  snapshot_spec.lua  ui_actions_keymaps_spec.lua  ui_actions_lsp_spec.lua  ui_input_spec.lua  ui_render_spec.lua  ui_spec.lua  util_spec.lua
