[package]
name = "code-shape-core"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "code-shape-core"
path = "src/main.rs"

[lib]
name = "code_shape_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
anyhow = "1"
rkyv = { version = "0.8", features = ["std"] }
sha2 = "0.10"
rayon = "1.12"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "index_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
